// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unit.models.Kopnik loaded success 1`] = `
Kopnik {
  "attachments": Array [],
  "birthyear": 1231,
  "created": undefined,
  "firstName": "Алексей",
  "foreman": null,
  "id": 2,
  "isLoaded": true,
  "lastName": "Баранов",
  "locale": undefined,
  "location": Array [
    55.755826,
    37.6173,
  ],
  "log": Logger {
    "debug": [Function],
    "disableAll": [Function],
    "enableAll": [Function],
    "error": [Function],
    "getLevel": [Function],
    "info": [Function],
    "levels": Object {
      "DEBUG": 1,
      "ERROR": 4,
      "INFO": 2,
      "SILENT": 5,
      "TRACE": 0,
      "WARN": 3,
    },
    "log": [Function],
    "methodFactory": [Function],
    "name": "Kopnik",
    "setDefaultLevel": [Function],
    "setLevel": [Function],
    "trace": [Function],
    "warn": [Function],
  },
  "nickname": undefined,
  "note": undefined,
  "passport": 1231,
  "patronymic": "qwer",
  "photo": "/avatar.png",
  "smallPhoto": "@todo",
  "status": 2,
  "ten": undefined,
  "uid": undefined,
  "witness": null,
  "witnessRequests": undefined,
}
`;

exports[`unit.models.Kopnik loaded throw error without cookie 1`] = `
Kopnik {
  "attachments": Array [],
  "birthyear": undefined,
  "created": undefined,
  "firstName": undefined,
  "foreman": undefined,
  "id": 2,
  "isLoaded": false,
  "lastName": undefined,
  "locale": undefined,
  "location": undefined,
  "log": Logger {
    "debug": [Function],
    "disableAll": [Function],
    "enableAll": [Function],
    "error": [Function],
    "getLevel": [Function],
    "info": [Function],
    "levels": Object {
      "DEBUG": 1,
      "ERROR": 4,
      "INFO": 2,
      "SILENT": 5,
      "TRACE": 0,
      "WARN": 3,
    },
    "log": [Function],
    "methodFactory": [Function],
    "name": "Kopnik",
    "setDefaultLevel": [Function],
    "setLevel": [Function],
    "trace": [Function],
    "warn": [Function],
  },
  "nickname": undefined,
  "note": undefined,
  "passport": undefined,
  "patronymic": undefined,
  "photo": undefined,
  "smallPhoto": undefined,
  "status": undefined,
  "ten": undefined,
  "uid": undefined,
  "witness": undefined,
  "witnessRequests": undefined,
}
`;
